packrat/styles/keeper/keep_box.less
/* ... */
.kifi-keep-box-lib {
  display: block;
  border-bottom: 1px solid @lib-border-color;
  background: 13px center / auto @lib-bg-height no-repeat;
  height: @lib-height;
  line-height: @lib-height;
  font-size: @lib-font-size;
  font-weight: @lib-font-weight;
  padding-left: @lib-pad-left;
  padding-right: 10px;
  color: @lib-color !important;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  .kifi-keep-box-lib-kept>& {
    padding-right: 85px;
  }
  &.kifi-create&:not(.kifi-query) {
    background-color: #f3f3f3;
    border-bottom: none;
    border-top: 1px solid @lib-border-color;
    .kifi-filtered+& {
      display: none;
    }
  }
  &.kifi-highlighted {
    background-color: #e8e8e8;
    &:active {
      background-color: #e3e3e3;
    }
  }
  &::before {
    left: 13px;
    top: 8px;
  }
}
.kifi-keep-box-lib-1 {
  display: block;
  padding-top: 5px;
  line-height: 20px;
  .kifi-query>& {
    font-weight: bold;
  }
}
.kifi-keep-box-lib-2 {
  display: block;
  line-height: 12px;
  font-size: 11px;
  .kifi-system>& {
    color: #999;
    font-size: 10px;
  }
}
.kifi-keep-box-with-lib-icon {
  position: relative;
  &::before {
    content: '';
    position: absolute;
    width: 20px;
    height: 28px;
    border-radius: 4px;
    box-shadow: 1px 1px #fff, 2px 2px #d3d3d3;
    @url: %(@svgLibCardWorldDataUrl, #fff);
    background: #73c885 url(@url) center/12px 12px no-repeat;
  }
  &.kifi-secret::before {
    @url: %(@svgLibCardLockDataUrl, #fff);
    background: #f16564 url(@url) center/8px 12px no-repeat;
  }
  &.kifi-system::before {
    background-color: #333434;
  }
  &.kifi-create::before {
    @url: %(@svgLibCardPlusDataUrl, #fff, #fff);
    background: #333434 url(@url) center/10px 10px no-repeat;
  }
}
.kifi-keep-box-button {
  padding: 0 15px;
  border: 1px solid rgba(0,0,0,.3);
  border-radius: 4px;
  background-image: linear-gradient(#fff, #f3f3f3);
  &:focus {
    outline: 0 !important;
    box-shadow: 0 0 4px #5b9dd9 !important;
  }
  &:hover:active,
  &:focus:active {
    background-image: none;
    background-color: #f3f3f3;
  }
  &:not([href]) {
    background: transparent;
    cursor: default;
  }
  color: #464646 !important;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
.kifi-keep-box-lib-unkeep {
  position: absolute;
  top: 7px;
  right: 9px;
  width: 70px;
  text-align: center;
  line-height: 28px;
  font-size: 11px;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  padding: 0;
}

.kifi-keep-box-new-lib-name {
  display: block;
  width: 100%;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  line-height: (@lib-font-size + 4px);
  font-size: @lib-font-size;
  font-weight: @lib-font-weight;
  padding: 20px 0;
  text-indent: 24px;
  color: @lib-color !important;
}
.kifi-keep-box-new-lib-visibility {
  padding: 16px 24px 0;
  min-height: 140px;
  line-height: 17px;
  font-size: 13px;
  color: #777;
  position: relative;
  &.kifi-checked>.kifi-n,
  &:not(.kifi-checked)>.kifi-y {
    display: none;
  }
}
@new-lib-secret-height: 36px;
.kifi-keep-box-new-lib-secret {
  @duration: .2s;
  vertical-align: middle;
  height: @new-lib-secret-height;
  width: 66px;
  background-color: #70c983; // #48b07a;
  border-radius: 18px;
  position: relative;
  cursor: pointer;
  transition: background-color @duration;
  .kifi-checked>& {
    background-color: #f06463 !important;
  }
  &::after {
    content: '';
    position: absolute;
    bottom: 4px;
    left: 4px;
    width: 28px;
    height: 28px;
    border-radius: 50%;
    box-shadow: 0 1px 1px rgba(0,0,0,.15);
    background-color: #fff;
    transition: -webkit-transform @duration;
    transition: transform @duration;
  }
  &:hover:active::after,
  &:focus:active::after {
    -webkit-transform: translate(4px);
    transform: translate(4px);
  }
  .kifi-checked>&:hover:active::after,
  .kifi-checked>&:focus:active::after {
    -webkit-transform: translate(26px);
    transform: translate(26px);
  }
  .kifi-checked>&::after {
    -webkit-transform: translate(30px);
    transform: translate(30px);
  }
  &:hover::after,
  &:focus::after {
    background-color: #fefcf1;
  }
  &:hover:active::after,
  &:focus:active::after {
    background-image: radial-gradient(#fcfcfc, rgba(243,243,243,0));
  }
}
.kifi-keep-box-new-lib-label {
  display: inline-block;
  line-height: @new-lib-secret-height;
  margin-left: 12px;
}
.kifi-keep-box-new-lib-vis {
  margin-top: 20px;
  background-position: left center !important;
  background-size: auto @lib-bg-height !important;
  background-repeat: no-repeat !important;
  padding-left: 36px;
  &::before {
    top: 2px;
    left: 2px;
  }
}
@footer-color: #f3f3f3;
.kifi-keep-box-footer {
  height: @lib-height;
  border-top: 1px solid @lib-border-color;
  background-color: @footer-color;
  text-align: center;
}
.kifi-keep-box-new-lib-create,
.kifi-keep-box-done {
  display: inline-block;
  margin-top: 7px;
  line-height: 28px;
  font-size: 12px;
  font-weight: bold;
  -webkit-font-smoothing: antialiased;
}

.kifi-keep-box-keep-title {
  display: block;
  width: 100%;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  padding: 16px 6px 4px 10px;
  line-height: 19px;
  font-size: 15px;
  font-weight: bold;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.kifi-keep-box-page-site {
  margin: 0 0 16px 10px;
  line-height: 13px;
  font-size: 11px;
  color: #777;
}
@image-height: 240px;
.kifi-keep-box-keep-image-picker {
  height: @image-height;
  position: relative;
  overflow: hidden;
}
.kifi-keep-box-keep-image-cart {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  &.kifi-animated {
    @duration: .2s;
    transition: -webkit-transform @duration ease-in-out;
    transition: transform @duration ease-in-out;
  }
  &.kifi-back:not(.kifi-roll),
  &.kifi-roll.kifi-forward {
    -webkit-transform: translate3d(-@view-width,0,0);
    transform: translate3d(-@view-width,0,0);
  }
}
/* ... */

